--- a/index.css
+++ b/index.css
@@ -2,12 +2,40 @@
     box-sizing: border-box;
 }
 
-.container{
+body{
     background-color: blueviolet;
     height: 1000px;
-    margin: 0;
+    margin: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+}
+
+.container{
+   position: relative;
+   height: 30px;
+}
+
+.input{
+    background-color: white;
+    height: 30px;
+    width: 30px;
+    border: 0;
+    transition: 0.5s;
+}
+
+.btn{
+    background-color: white;
+    height: 30px;
+    width: 30px;
+    border: 0px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.5s;
+}
+
+.btn:hover{
+    transform: scale(1.1);
 }
