--- a/index.css
+++ b/index.css
@@ -14,28 +14,40 @@ body{
 
 .container{
    position: relative;
-   height: 30px;
+   height: 40px;
 }
 
-.input{
+.container .input{
     background-color: white;
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     border: 0;
-    transition: 0.5s;
+    transition: width 0.5s ease;
+    padding: 20px;
+    font-size: 20px;
 }
 
-.btn{
+.container .btn{
     background-color: white;
-    height: 30px;
-    width: 30px;
+    cursor: pointer;
+    height: 40px;
+    width: 40px;
     border: 0px;
     position: absolute;
     top: 0;
     left: 0;
-    transition: 0.5s;
+    transition: 0.5s ease; 
 }
 
-.btn:hover{
-    transform: scale(1.1);
+.container.active .input{
+    width: 90%;
+}
+
+.container.active .btn{
+    transform: translateX(220px);
+}
+
+.img{
+    height: 20px;
+    width: 20px;
 }
